app/assets/stylesheets/api/main.scss
 html, body, #app, #app>div {
    height: 100vh;
}

select {
    -webkit-appearance: none;
    -webkit-border-radius: 0px; 
}
body{
    /* FOR HELP WITH DEBUGGING, REMOVE THIS LATER!!! */
    background-color:#fdfdfd;
    /* FOR HELP WITH DEBUGGING, REMOVE THIS LATER!!! */
}

header{
    position: fixed;
    padding-top:12px;
    left: 0;
    top: 0;
    width: 100%;
    display: flex;
    justify-content: space-between;
}

header > a:first-of-type{
    margin-left: 20px;
}

#app > .page-content-container {
    height: auto;
    background: #fdfdfd;

}

.header-group {
    display: inline-flex;
}

.header-group > h2 {
    padding-top: 2px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 200;
    font-size: 1.5vh;
    color: white;
    margin-right: 30px;    
}

.header-button, .session-submit {
    padding: 5px 20px 5px 20px;
    border-radius:25px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 500;
    font-size: 1.5vh;
    color: #444;
    border:none;
}

.header-button:hover {
    cursor: pointer;
}


.icon-white{
    width: 50px;
    height: 50px;
    background-image: url(https://s3-us-west-2.amazonaws.com/mybnb-seeds/mybnb_logo_white.svg);
    background-size: 50px 50px;
}

.splash-page > h1 {
    padding-top: 300px;
    text-align: center;
    color: white;
}

.content-container {
    background: #fdfdfd;
    height: initial;
}

#logo-header {
    margin-top: -3vw;
    width: 30vw;
    height: 10vw;
    background-size: 25vw 14vw;
    min-width: 100px;
    background-image: url(https://s3-us-west-2.amazonaws.com/mybnb-seeds/LogoLg_v1.png);
    background-position-x: 50%;
    background-repeat: no-repeat;
}

.splash-page{
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    background-image: url(https://s3-us-west-2.amazonaws.com/mybnb-seeds/airbnb_dark2.jpg);
    height: 100%;
}

.splash-search-container {
    padding: 180px 0 0 10vw;
    max-width: 500px;
}

.splash-search-container  h1 {
    text-align: left;
    padding-left: 12%;
    margin: 20px 0 8px 0;
    min-width: 200px;
    overflow: wrap;
    font-size: 30px;
    color: #484848;
}

.dropdown-input {
    min-width: 73%;
    max-width: 80%;
    min-height:45px;
    background-color: white;
    border:1px solid #dbdbdb;
    color: #AEAEAE;
    margin: 0 auto;
    height: 42px;
    padding: 20px 0px 20px 10px;
    border-radius: 0px ;
    -webkit-box-shadow: 2px 2px 5px 0px #7b7b7b26;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
    -moz-box-shadow:    2px 2px 5px 0px #7b7b7b26;  /* Firefox 3.5 - 3.6 */
    box-shadow:         2px 2px 5px 0px #7b7b7b26;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
}

.dropdown-input:focus {
    outline: none;
    border-bottom: 1px solid #6bb3b7;
    outline: none;
    color:black;
    box-shadow: none;
}

.dropdown-input:active {
    outline: none;
    border-bottom: 1px solid #6bb3b7;
    outline: none;
    color:black;
    box-shadow: none;
}

.top-nav {
    background-color: #ffffff;
    -webkit-box-shadow: 2px 2px 5px 0px #7b7b7b26;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
    -moz-box-shadow:    2px 2px 5px 0px #7b7b7b26;  /* Firefox 3.5 - 3.6 */
    box-shadow:         2px 2px 5px 0px #7b7b7b26;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
    padding-bottom: 12px;
    z-index: 2;
}

.top-options{
    display: flex;
    justify-content: center;
    margin-top: 25px;
    width: 100%;
}

.search-form p {
    font-size: 14px;
    font-weight: 400;
    color: #484848;
}

.when > p {
    padding-left: 12px;
}

.option-dropdown {
    height: 41px;
    width: 168px;
    margin: 10px 0px 15px 5px;
    border: .9px solid #dbdbdbde;
    background-color: rgba(255, 255, 255, 0);
    border-radius: 1.5px !important;
    font-size: 14.4px;
    color: #757575;
    padding-left: 6px;
}


.where .option-dropdown{
    margin-right: 6px;
    margin-left: 0px;

}

.search-submit{ 
    -webkit-box-shadow: 2px 2px 5px 0px #3b353546;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
    -moz-box-shadow:    2px 2px 5px 0px #3b353546;  /* Firefox 3.5 - 3.6 */
    box-shadow:         2px 2px 5px 0px #3b353546;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
    min-width: 40%;
    max-width: 45%;
    margin: 30px auto 15px 52.5% ;
    padding: 15px 20px 15px 20px;
    border-radius:2px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    font-size: 13px;
    color: white;
    background: rgb(247,68,28);
    background: linear-gradient(315deg,
                 rgba(247,68,28,1) 0%,
                 rgba(248,75,81,1) 100%);
    text-align: center;
    border: none;
}
.search-submit:hover{
    background: rgb(218, 62, 27);
    background: linear-gradient(315deg,
                rgb(243, 74, 37) 0%, 
                rgb(230, 70, 76) 100%);
    cursor: pointer;
}

.splash {
    .where{
        margin-left: 31px;
        select{
            width:100%;
            height: 45px;
        }
    }
    .guests{
        input{
            width: 72%;
            display: block;
        }
    }
    label{
        font-size:14px;
        font-weight: 400;

    }
}

